testdata/invalid/missing_fields.cast
{"version": 2}
[0.5, "o", "hello"]